Fixing overflow of ExecutionReporter

--- a/app/core/renderer/components/editor/execution_reporter/ExecutionReporter.scss
+++ b/app/core/renderer/components/editor/execution_reporter/ExecutionReporter.scss
@@ -78,7 +78,7 @@ $sidebar-width: 40px;
 
 .output{
   font-weight: normal;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .error{
